# work-life-buddy

./: Cargo.toml  README.md  build.rs  work-life-buddy.service
.devcontainer/: devcontainer.json
src/: config.rs  main.rs  notify.rs  scheduler.rs
