[package]
name = "work-life-buddy"
version = "1.0.0"
edition = "2021"
description = "Work-life balance enforcer that logs you out during off hours"
license = "GPL-3.0-or-later"

[[bin]]
name = "work-life-buddy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
dirs = "5"
env_logger = "0.11"
log = "0.4"
notify-rust = { version = "4", default-features = false, features = ["z-with-tokio"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
